@@ -1,3 +1,9 @@
+
+Improvements
+------------
+- reorder_RR() implementation is brought back
+
+
 Knot Resolver 2.4.1 (2018-08-02)
 ================================
 
